--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
         1000
       )
       camera.position.z = 5
-      // camera.position.x = 2
-      // camera.near = 0
 
       const renderer = new THREE.WebGLRenderer({ antialias: true })
       renderer.setClearColor('#e5e5e5')
@@ -36,31 +34,78 @@
         camera.updateProjectionMatrix()
       })
 
+      const raycaster = new THREE.Raycaster()
+      const mouse = new THREE.Vector2()
+
       window.addEventListener('wheel', (e) => {
         const zoom = e.deltaY * 0.005
         camera.position.z += zoom
         renderer.render(scene, camera)
       })
 
+      // 3D objects
       const geometry = new THREE.BoxGeometry(1, 1, 1)
       const material = new THREE.MeshLambertMaterial({ color: 0x00ccff })
-      const mesh = new THREE.Mesh(geometry, material)
 
-      scene.add(mesh)
+      for (let i = 0; i < 15; i++) {
+        const mesh = new THREE.Mesh(geometry, material)
+        mesh.position.x = (Math.random() - 0.5) * 10
+        mesh.position.y = (Math.random() - 0.5) * 10
+        mesh.position.z = (Math.random() - 0.5) * 10
+        scene.add(mesh)
+      }
 
       const light = new THREE.PointLight(0xffffff, 1, 500)
-      light.position.set(10, 0, 25)
+      light.position.set(0, 0, 0)
       scene.add(light)
+
+      const light2 = new THREE.PointLight(0xffffff, 2, 500)
+      light2.position.set(0, 0, 100)
+      scene.add(light2)
 
       const render = () => {
         requestAnimationFrame(render)
-        mesh.rotation.x += 0.01
-        mesh.rotation.y += 0.01
-        mesh.rotation.z += 0.005
+        for (let i = 0; i < scene.children.length; i++) {
+          scene.children[i].rotation.x += 0.01
+          scene.children[i].rotation.y += 0.01
+          scene.children[i].rotation.z += 0.005
+        }
         renderer.render(scene, camera)
       }
 
+      const onClick = (e) => {
+        e.preventDefault()
+        mouse.x = (e.clientX / window.innerWidth) * 2 - 1
+        mouse.y = -(e.clientY / window.innerHeight) * 2 + 1
+
+        raycaster.setFromCamera(mouse, camera)
+
+        const intersects = raycaster.intersectObjects(scene.children, true)
+        for (let i = 0; i < intersects.length; i++) {
+          let tl = new TimelineMax()
+          const prevPos = intersects[i].object.position.x
+          tl.to(intersects[i].object.scale, 1, {
+            x: 3,
+            ease: Expo.easeOut,
+          })
+          tl.to(intersects[i].object.scale, 1, {
+            x: 1,
+            ease: Expo.easeOut,
+          })
+          tl.to(intersects[i].object.position, 2, {
+            x: 2,
+            ease: Expo.easeOut,
+          })
+          tl.to(intersects[i].object.position, 2, {
+            x: prevPos,
+            ease: Expo.easeOut,
+          })
+        }
+      }
+
       render()
+
+      window.addEventListener('click', onClick)
     </script>
   </body>
 </html>
